--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ img{
 .sec-droite{
     margin-left: 130px;
     margin-top: 27px;
+    font-size: 13px;
 }
 h2{
     border-bottom: 3px solid goldenrod;
