--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .page{
     width: 780px;
+    height: 1100;
     margin: auto;
     font-size: 13px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -15,9 +16,12 @@ img{
 
 .droite {
     background-color: rgb(255, 255, 255);
+    height: max-content;
 }
 .box{
     display: flex;
+    height: 1100px;
+    width: 780px;
 }
 .photo{
     margin-left: 35px;
@@ -27,7 +31,6 @@ img{
 .section{
     margin-left: 20px;
     margin-top: 50px;
-    margin-bottom: 50px;
     display: inline-block;
     text-align: justify;
 }
